--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/fsn1year.jpg">
+		<img src="">
 		<h1>Farm Simulator Network</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
 		<h2>About FSN</h2>
-		<p>Farm Simulator Network (FSN for short) is a passion project created to enhance a players experience of the game Farming Simulator 19. It is essentially the most realistic way to play the game and is packed full of interesting additions to the game.</p>
+		<p>Farm Simulator Network (FSN for short) is one man's creation  created to enhance a players experience of the game Farming Simulator 19. It is essentially the most realistic way to play the game and is packed full of interesting additions to the game.</p>
 		<img src="img/fsnsite.png">
 		<p>The home page of their website</p>
 		
