--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<!-- header element -->
 	<header>
-		<img src="">
+		<img src="fsn1year.jpg">
 		<h1>Farm Simulator Network</h1>
 	</header>
 
