--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- main element -->
 	<main>
 		<h2>About FSN</h2>
-		<p>Farm Simulator Network (FSN for short) is one man's creation  created to enhance a players experience of the game Farming Simulator 19. It is essentially the most realistic way to play the game and is packed full of interesting additions to the game.</p>
+		<p>Farm Simulator Network (FSN for short) is one man's creation made to enhance a players experience of the game Farming Simulator 19. It is essentially the most realistic way to play the game and is packed full of interesting additions to the game.</p>
 		<img src="fsnsite.jpg">
 		<p>The home page of their website</p>
 		
