--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Farm Simulator Network</title>
-	<link rel="icon" href="img/fsn1year.jpg">
+	<link rel="icon" href="trac favicon.jpg">
 </head>
 <body>
 	<!-- header element -->
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
