Added red color test

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Farm Simulator Network</title>
 	<link rel="icon" href="trac favicon.jpg">
+	<link rel="stylesheet" type="text/css" href="fsn.css">
 </head>
 <body>
 	<!-- header element -->
