Added more fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Farm Simulator Network</title>
 	<link rel="icon" href="trac favicon.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="fsn.css">
 </head>
 <body>
